[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Models/Meshes/MeshIceDeco1.res" type="ArrayMesh" id=1]
[ext_resource path="res://Assets/Models/ModelIceDeco.gd" type="Script" id=2]
[ext_resource path="res://Assets/Models/Meshes/MeshIceDeco3.res" type="ArrayMesh" id=3]
[ext_resource path="res://Assets/Models/Meshes/MeshIceDeco2.res" type="ArrayMesh" id=4]
[ext_resource path="res://Assets/Models/Meshes/MeshIceDeco4.res" type="ArrayMesh" id=5]

[node name="ModelIceDeco" type="Spatial"]
script = ExtResource( 2 )
type = 1

[node name="Ice001" type="MeshInstance" parent="."]
transform = Transform( 0.311637, 0, 0, 0, 0.311637, 0, 0, 0, 0.311637, 0, 0, 0 )
mesh = ExtResource( 1 )

[node name="Ice002" type="MeshInstance" parent="."]
transform = Transform( 0.288697, 0, 0, 0, 0.288697, 0, 0, 0, 0.288697, 0, 0, 0 )
visible = false
mesh = ExtResource( 4 )

[node name="Ice003" type="MeshInstance" parent="."]
transform = Transform( 0.288697, 0, 0, 0, 0.288697, 0, 0, 0, 0.288697, 0, 0, 0 )
visible = false
mesh = ExtResource( 3 )

[node name="Ice004" type="MeshInstance" parent="."]
transform = Transform( 0.378984, 0, 0, 0, 0.378984, 0, 0, 0, 0.378984, 0, 0, 0 )
visible = false
mesh = ExtResource( 5 )
